--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "firebase": "^8.3.2",
+    "jquery": "^3.6.0",
+    "sweetalert2": "^10.15.7",
+    "vue": "^2.6.11",
+    "vue-firestore": "^0.3.30",
+    "vue-router": "^3.5.1",
+    "vue2-filters": "^0.12.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
