Updated Purchase Dashboard, Added Highest and Lowest Footprint Products

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.0.2",
     "core-js": "^3.6.5",
     "firebase": "^8.3.2",
     "jquery": "^3.6.0",
     "sweetalert2": "^10.15.7",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-firestore": "^0.3.30",
     "vue-router": "^3.5.1",
     "vue2-filters": "^0.12.0"
