--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
-    "chart.js": "^3.0.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
-    "firebase": "^8.3.2",
     "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sass-loader": "^10.1.1",
     "sweetalert2": "^10.15.7",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1",
     "vue-firestore": "^0.3.30",
     "vue-router": "^3.5.1",
+    "vue2-editor": "^2.10.2",
     "vue2-filters": "^0.12.0"
   },
   "devDependencies": {
